# CppNext

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  vcpkg.json
io/: async.hpp
log/: record.hpp  track.hpp
test/: CMakeLists.txt
test/win32/: file_io_unittest.cc  file_io_unittest.cpp  log_unittest.cpp
win32/: CMakeLists.txt  CheckUtils.h  FileObject.h  IoCompletionPort.cpp  IoCompletionPort.h  IoCompletionService.cpp  IoCompletionService.h  KernelObject.cpp  KernelObject.h  check_utils.h  debug_utils.h  file_io_service.h  file_object.cpp  file_object.h  io_completion_port.cpp  io_completion_port.h  io_completion_service.cpp  io_completion_service.h  io_object.h  io_service.h  kernel_object.cpp  kernel_object.h  log_utils.cpp  log_utils.h
